# GDriveBackup

./: .clang-format  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: multi-platform.yml
include/: GDriveEncrypt.hpp  GDriveLoadLayer.hpp  GDriveManager.hpp  GDrivePopup.hpp  GDriveSigninPopup.hpp  GDriveSlotBox.hpp  picosha2.h
src/: GDriveEncrypt.cpp  GDriveLoadLayer.cpp  GDriveManager.cpp  GDriveManager.hpp  GDrivePopup.cpp  GDrivePopup.hpp  GDriveSettingsButton.cpp  GDriveSigninPopup.cpp  GDriveSlotBox.cpp  iosHardwareID.mm  main.cpp
